gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jintianchisha
  labels:
    app: jintianchisha
